Restore visible desktop chevrons; keep minimal mobile caret buttons

--- a/assets/css/dropdown-nav.css
+++ b/assets/css/dropdown-nav.css
@@ -93,7 +93,7 @@ button.nav-caret { display: none !important; }
 }
 
 #nav > ul > li.has-dropdown > a::after { 
-  display: none; 
+  display: inline-block; 
 }
 
 #nav > ul > li.has-dropdown > button.nav-caret:hover {
